--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <h1>MHRC</h1>
         </div>
         <div class="sections">
-            <a href="#home">Home</a> 
-            <a href="#about">About Us</a> 
+            <a  href="#home">Home</a> 
+            <a id="mylink" href="#about">Contant Us</a> 
         </div> 
-        
+        <p></p>
     </div>
     <script src="index.js"></script>
 </body>
